﻿Legend:
! Breaking change
* Compatible change
- Bugfix
+ New feature
===============================================================================

~~~~~~~~~
* v6.3.0:
~~~~~~~~~

* KGySoft.Drawing.Imaging namespace
===================================
+ BitmapDataFactory class:
  + New CreateBitmapData overloads to create bitmap data for preallocated memory. Supporting 1D/2D arrays of any
    unmanaged element type (structs without references) as well as unmanaged memory and custom pixel formats.
+ New PixelFormatInfo struct to support custom pixel formats.
+ New ICustomBitmapDataRow/ICustomBitmapDataRow<T> interfaces to support accessing rows with custom pixel formats.
+ PredefinedColorsQuantizer:
  + FromBitmapData method: From now on it supports also custom pixel formats
* GifEncoder class:
  * The performance and memory usage of the LZW compression has been improved.
  - EncodeAnimation method: If quantizer is not set but the input image is already indexed, then not using the
    default Wu quantizer on the input frame.


~~~~~~~~~
* v6.2.0:
~~~~~~~~~

* Assembly changes:
===================
+ Explicitly targeting also .NET Framework 4.6.
- Removing P/Invoke calls for special functions, whose entry points are mocked by the JIT compiler because these
  were not supported in all cases.

* KGySoft.Drawing.Imaging namespace
===================================
* GifEncoder class: Improved quality when AnimatedGifConfiguration.AllowDeltaFrames property is true.
+ AnimatedGifConfiguration: New DeltaTolerance property.
- BitmapDataExtensions class: Fixing blending of DrawInto/BeginDrawInto/DrawIntoAsync methods if target
  is a custom IReadWriteBitmapData implementation.


~~~~~~~~~
! v6.1.0:
~~~~~~~~~

- Common changes:
=================
- Using unified entry points on Windows for P/Invoke calls both for .NET Framework and .NET/Core platforms. This
  helps to avoid issues when a .NET Framework build is executed on .NET/Core (should not occur when using package